--- a/src/modules/SecondPage/TransactionTable/TransactionTable.module.css
+++ b/src/modules/SecondPage/TransactionTable/TransactionTable.module.css
@@ -2,12 +2,36 @@
   .table {
     width: 280px;
   }
+
   .table th {
     display: none;
   }
 }
 
 @media screen and (min-width: 768px) {
+  .secondTable {
+    width: 620px;
+    height: 38px;
+    margin-left: 32px;
+    border-collapse: collapse;
+  }
+
+  .scroll {
+    display: block;
+    height: 250px;
+    overflow-y: scroll;
+    background-color: #f5f6fb;
+  }
+
+  .scroll::-webkit-scrollbar {
+    width: 6px;
+  }
+
+  .scroll::-webkit-scrollbar-thumb {
+    background-color: #ff751d;
+    border-radius: 2px;
+  }
+
   .table {
     max-width: 624px;
     max-height: 38px;
@@ -15,7 +39,6 @@
     padding-left: 40px;
     padding-right: 40px;
     border-collapse: collapse;
-    overflow: scroll;
   }
 
   .table th {
@@ -43,28 +66,25 @@
   .table td {
     border: none;
     border-bottom: 2px solid #f2f8f8;
+    border-left: 2px solid #f2f8f8;
     width: 746px;
     height: 32px;
   }
 
-  tbody {
-    text-align: center;
-    border: 2px solid #f2f8f8;
-    overflow: scroll;
-  }
   .table thead tr th:first-child {
     border-radius: 20px 0 0 0;
   }
+
   .table thead tr th:last-child {
     border-radius: 0 20px 0 0;
   }
 }
 
-@media screen and (min-width: 1024px) {
+/* @media screen and (min-width: 1024px) {
   .table {
     width: 746px;
     height: 38px;
     margin-left: 32px;
     margin-top: 60px;
   }
-}
+} */
