--- a/src/modules/SecondPage/IncomeExpense/IncomeExpense.module.css
+++ b/src/modules/SecondPage/IncomeExpense/IncomeExpense.module.css
@@ -47,7 +47,7 @@
     text-align: center;
     letter-spacing: 0.02em;
     text-transform: uppercase;
-    padding: 14px;
+    padding: 14px 34px;
   }
   .nav {
     width: auto;
