--- a/src/modules/LoaderSection/LoaderSection.module.css
+++ b/src/modules/LoaderSection/LoaderSection.module.css
@@ -1,7 +1,8 @@
 .container {
+  margin-top: 50px;
   width: 100%;
   height: 100%;
-  background-color: #fff;
+  background-color: transparent;
   display: flex;
   align-items: center;
   justify-content: center;
